Made Maven compile for Java 16 to support people with 1.17 and Java 16 && Did some better energy detection && Added Astra gem lore && Added Minimessage and BukkitAudience